# Lumivox

./: .gitignore  Data_loading.ipynb  README.md  TRAINING_NOTES.md  inference  kpixi.toml  pixi.toml  pyproject.toml  simclr_monitor.csv  simclr_monitor_iba1.csv
configs/: byol3d_legacy.py  nnbyol3d.py  shared.py  simclr.py
docs/: finefinetuning.md  finetuning.md
logs/: cache_patches_46611.out  cache_patches_46612.out  cache_patches_46636.out  cache_patches_48528.out  cache_patches_48569.out  cache_patches_48577.out  cache_patches_48667.out  finish_abeta_nnbyol3d_46654.err  finish_abeta_nnbyol3d_46654.out  finish_abeta_nnbyol3d_46654_monitor.csv  finish_abeta_nnbyol3d_46655.err  finish_abeta_nnbyol3d_46655.out  finish_abeta_nnbyol3d_46655_monitor.csv
lumivox/: __init__.py
manifests/: abeta_ft_first_pass.json  abeta_ft_v4_A.json  qc_3per_subject.json  qc_3per_subject_crop128.json  qc_recheck_7subjects.json  test_1sub_1000patches.json  test_voxel.json
scripts/: audit_gold_patches.py  binarize_AS36F4_all.sbatch  binarize_AS36F4_nnbyol3d.sbatch  binarize_AS36F4_v2.sbatch  binarize_ozx_to_omezarr.py  build_abeta_gt_v2.py  build_abeta_gt_v3.py  build_abeta_gt_v4.py  build_canvas_iba1_gt_patches.py  build_canvas_patches.py  build_eval_patches.py  build_eval_patches.sbatch  build_finetune_data.py  build_finetune_normalized.py  build_myiba1_gt_patches.py  build_training_manifests.py  build_v4_ft_manifest.py  cache_patches.py  cellpose_sweep_patch.py  ciba1.sh  downsample_AS36F4_masks.sbatch  downsample_gold_to_crop128.py  downsample_mask_to_nii.py  eval_simclr.sbatch  (+54 more)
(+49 files in other folders)
