[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumivox"
version = "0.1.0"
description = "Unified SSL Pretraining for 3D Lightsheet Microscopy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1",
    "pytorch-lightning>=2.0",
    "dynamic-network-architectures>=0.4",
    "blosc2>=2.5",
    "numpy>=1.24",
    "einops>=0.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
include = ["lumivox*", "configs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --timeout=120"
